removed popup.js from manifest

--- a/manifest.json
+++ b/manifest.json
@@ -11,8 +11,7 @@
     ],
     "background": {
         "scripts": [
-            "background.js",
-			"popup.js"
+            "background.js"
         ],
         "persistent": false
     },
